[package]
name = "binance-arbitrage"
version = "0.1.0"
edition = "2021"
description = "USDT和USDC套利程序，用于币安交易所"
authors = ["Kwaipilot"]

[dependencies]
tokio = { version = "1.28", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rust_decimal =  { version = "1.37", features = ["macros","maths"] }
log = "0.4"
dotenv = "0.15"
anyhow = "1.0"
reqwest = { version = "0.11", features = ["json"] }
clap = { version = "4.3", features = ["derive"] }
chrono = { version = "0.4",features = ["serde"] }
csv = "1.2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
async-trait = "0.1"
rand = "0.8" # 添加随机数生成依赖
hex = "0.4"
hmac = "0.12"
sha2 = "0.10"

# 数据库依赖
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "mysql", "chrono","rust_decimal","uuid","json"] }
